Bug 199187 - When Caps Lock is enabled on the Smart Keyboard, can't scroll with space or arrow keys
Summary: When Caps Lock is enabled on the Smart Keyboard, can't scroll with space or a...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-06-25 01:45 PDT by Tim Horton
Modified: 2019-06-25 10:30 PDT (History)
5 users (show)

See Also:


Attachments
Patch (1.72 KB, patch)
2019-06-25 01:45 PDT, Tim Horton
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2019-06-25 01:45:33 PDT
When Caps Lock is enabled on the Smart Keyboard, can't scroll with space or arrow keys
Comment 1 Tim Horton 2019-06-25 01:45:38 PDT
Created attachment 372826 [details]
Patch
Comment 2 Tim Horton 2019-06-25 01:45:41 PDT
<rdar://problem/51521709>
Comment 3 Anders Carlsson 2019-06-25 06:44:46 PDT
Comment on attachment 372826 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=372826&action=review

> Source/WebKit/UIProcess/ios/WKKeyboardScrollingAnimator.mm:246
> +    auto relevantModifierFlags = WebEventFlagMaskOptionKey | WebEventFlagMaskCommandKey | WebEventFlagMaskShiftKey;

Looks like WebEventFlag should be an OptionSet.
Comment 4 Tim Horton 2019-06-25 10:00:02 PDT
Quite!
Comment 5 WebKit Commit Bot 2019-06-25 10:29:59 PDT
Comment on attachment 372826 [details]
Patch

Clearing flags on attachment: 372826

Committed r246795: <https://trac.webkit.org/changeset/246795>
Comment 6 WebKit Commit Bot 2019-06-25 10:30:01 PDT
All reviewed patches have been landed.  Closing bug.