When Caps Lock is enabled on the Smart Keyboard, can't scroll with space or arrow keys https://bugs.webkit.org/show_bug.cgi?id=199187 <rdar://problem/51521709>

Reviewed by Anders Carlsson.

* UIProcess/ios/WKKeyboardScrollingAnimator.mm:
(-[WKKeyboardScrollingAnimator keyboardScrollForEvent:]):
When deciding whether a key event should start a scroll, ignore all
modifiers other than the ones we actually care about (including Caps Lock).


Canonical link: https://commits.webkit.org/213155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246795 268f45cc-cd09-0410-ab3c-d52691b4dbfc